--- a/src/alarmapp/MainPage.form
+++ b/src/alarmapp/MainPage.form
@@ -8,11 +8,31 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="File"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem1">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="Exit"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem1ActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
         <Menu class="javax.swing.JMenu" name="jMenu2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Edit"/>
+            <Property name="text" type="java.lang.String" value="Help"/>
           </Properties>
+          <SubComponents>
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItem2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="About App"/>
+              </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItem2ActionPerformed"/>
+              </Events>
+            </MenuItem>
+          </SubComponents>
         </Menu>
       </SubComponents>
     </Menu>
@@ -46,12 +66,34 @@
                   <Group type="102" alignment="0" attributes="0">
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTextField1" min="-2" pref="102" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Component id="jComboBox1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="jComboBox4" alignment="0" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" attributes="0">
+                              <Component id="jComboBox2" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jComboBox3" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <Component id="jComboBox5" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jComboBox6" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                  </Group>
               </Group>
-              <EmptySpace pref="299" max="32767" attributes="0"/>
+              <EmptySpace pref="170" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,10 +106,20 @@
                   <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBox1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBox2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBox3" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="144" max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="jLabel3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBox4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBox5" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jComboBox6" alignment="3" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace pref="132" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -90,11 +142,271 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="jTextField1"/>
+        <Property name="text" type="java.lang.String" value="Enter Event Name"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBox1">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="32">
+            <StringItem index="0" value="Day"/>
+            <StringItem index="1" value="1"/>
+            <StringItem index="2" value="2"/>
+            <StringItem index="3" value="3"/>
+            <StringItem index="4" value="4"/>
+            <StringItem index="5" value="5"/>
+            <StringItem index="6" value="6"/>
+            <StringItem index="7" value="7"/>
+            <StringItem index="8" value="8"/>
+            <StringItem index="9" value="9"/>
+            <StringItem index="10" value="10"/>
+            <StringItem index="11" value="11"/>
+            <StringItem index="12" value="12"/>
+            <StringItem index="13" value="13"/>
+            <StringItem index="14" value="14"/>
+            <StringItem index="15" value="15"/>
+            <StringItem index="16" value="16"/>
+            <StringItem index="17" value="17"/>
+            <StringItem index="18" value="18"/>
+            <StringItem index="19" value="19"/>
+            <StringItem index="20" value="20"/>
+            <StringItem index="21" value="21"/>
+            <StringItem index="22" value="22"/>
+            <StringItem index="23" value="23"/>
+            <StringItem index="24" value="24"/>
+            <StringItem index="25" value="25"/>
+            <StringItem index="26" value="26"/>
+            <StringItem index="27" value="27"/>
+            <StringItem index="28" value="28"/>
+            <StringItem index="29" value="29"/>
+            <StringItem index="30" value="30"/>
+            <StringItem index="31" value="31"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBox2">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="13">
+            <StringItem index="0" value="Month"/>
+            <StringItem index="1" value="January"/>
+            <StringItem index="2" value="February"/>
+            <StringItem index="3" value="March"/>
+            <StringItem index="4" value="April"/>
+            <StringItem index="5" value="May"/>
+            <StringItem index="6" value="June"/>
+            <StringItem index="7" value="July"/>
+            <StringItem index="8" value="August"/>
+            <StringItem index="9" value="September"/>
+            <StringItem index="10" value="October"/>
+            <StringItem index="11" value="November"/>
+            <StringItem index="12" value="December"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBox3">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="20">
+            <StringItem index="0" value="Year"/>
+            <StringItem index="1" value="2012"/>
+            <StringItem index="2" value="2013"/>
+            <StringItem index="3" value="2014"/>
+            <StringItem index="4" value="2015"/>
+            <StringItem index="5" value="2016"/>
+            <StringItem index="6" value="2017"/>
+            <StringItem index="7" value="2018"/>
+            <StringItem index="8" value="2019"/>
+            <StringItem index="9" value="2020"/>
+            <StringItem index="10" value="2021"/>
+            <StringItem index="11" value="2022"/>
+            <StringItem index="12" value="2023"/>
+            <StringItem index="13" value="2024"/>
+            <StringItem index="14" value="2025"/>
+            <StringItem index="15" value="2026"/>
+            <StringItem index="16" value="2027"/>
+            <StringItem index="17" value="2028"/>
+            <StringItem index="18" value="2029"/>
+            <StringItem index="19" value="2030"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBox4">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="25">
+            <StringItem index="0" value="Hour"/>
+            <StringItem index="1" value="0"/>
+            <StringItem index="2" value="1"/>
+            <StringItem index="3" value="2"/>
+            <StringItem index="4" value="3"/>
+            <StringItem index="5" value="4"/>
+            <StringItem index="6" value="5"/>
+            <StringItem index="7" value="6"/>
+            <StringItem index="8" value="7"/>
+            <StringItem index="9" value="8"/>
+            <StringItem index="10" value="9"/>
+            <StringItem index="11" value="10"/>
+            <StringItem index="12" value="11"/>
+            <StringItem index="13" value="12"/>
+            <StringItem index="14" value="13"/>
+            <StringItem index="15" value="14"/>
+            <StringItem index="16" value="15"/>
+            <StringItem index="17" value="16"/>
+            <StringItem index="18" value="17"/>
+            <StringItem index="19" value="18"/>
+            <StringItem index="20" value="19"/>
+            <StringItem index="21" value="20"/>
+            <StringItem index="22" value="21"/>
+            <StringItem index="23" value="22"/>
+            <StringItem index="24" value="23"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBox5">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="61">
+            <StringItem index="0" value="Minutes"/>
+            <StringItem index="1" value="0"/>
+            <StringItem index="2" value="1"/>
+            <StringItem index="3" value="2"/>
+            <StringItem index="4" value="3"/>
+            <StringItem index="5" value="4"/>
+            <StringItem index="6" value="5"/>
+            <StringItem index="7" value="6"/>
+            <StringItem index="8" value="7"/>
+            <StringItem index="9" value="8"/>
+            <StringItem index="10" value="9"/>
+            <StringItem index="11" value="10"/>
+            <StringItem index="12" value="11"/>
+            <StringItem index="13" value="12"/>
+            <StringItem index="14" value="13"/>
+            <StringItem index="15" value="14"/>
+            <StringItem index="16" value="15"/>
+            <StringItem index="17" value="16"/>
+            <StringItem index="18" value="17"/>
+            <StringItem index="19" value="18"/>
+            <StringItem index="20" value="19"/>
+            <StringItem index="21" value="20"/>
+            <StringItem index="22" value="21"/>
+            <StringItem index="23" value="22"/>
+            <StringItem index="24" value="23"/>
+            <StringItem index="25" value="24"/>
+            <StringItem index="26" value="25"/>
+            <StringItem index="27" value="26"/>
+            <StringItem index="28" value="27"/>
+            <StringItem index="29" value="28"/>
+            <StringItem index="30" value="29"/>
+            <StringItem index="31" value="30"/>
+            <StringItem index="32" value="31"/>
+            <StringItem index="33" value="32"/>
+            <StringItem index="34" value="33"/>
+            <StringItem index="35" value="34"/>
+            <StringItem index="36" value="35"/>
+            <StringItem index="37" value="36"/>
+            <StringItem index="38" value="37"/>
+            <StringItem index="39" value="38"/>
+            <StringItem index="40" value="39"/>
+            <StringItem index="41" value="40"/>
+            <StringItem index="42" value="41"/>
+            <StringItem index="43" value="42"/>
+            <StringItem index="44" value="43"/>
+            <StringItem index="45" value="44"/>
+            <StringItem index="46" value="45"/>
+            <StringItem index="47" value="46"/>
+            <StringItem index="48" value="47"/>
+            <StringItem index="49" value="48"/>
+            <StringItem index="50" value="49"/>
+            <StringItem index="51" value="50"/>
+            <StringItem index="52" value="51"/>
+            <StringItem index="53" value="52"/>
+            <StringItem index="54" value="53"/>
+            <StringItem index="55" value="54"/>
+            <StringItem index="56" value="55"/>
+            <StringItem index="57" value="56"/>
+            <StringItem index="58" value="57"/>
+            <StringItem index="59" value="58"/>
+            <StringItem index="60" value="59"/>
+          </StringArray>
+        </Property>
+      </Properties>
+    </Component>
+    <Component class="javax.swing.JComboBox" name="jComboBox6">
+      <Properties>
+        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+          <StringArray count="61">
+            <StringItem index="0" value="Seconds"/>
+            <StringItem index="1" value="0"/>
+            <StringItem index="2" value="1"/>
+            <StringItem index="3" value="2"/>
+            <StringItem index="4" value="3"/>
+            <StringItem index="5" value="4"/>
+            <StringItem index="6" value="5"/>
+            <StringItem index="7" value="6"/>
+            <StringItem index="8" value="7"/>
+            <StringItem index="9" value="8"/>
+            <StringItem index="10" value="9"/>
+            <StringItem index="11" value="10"/>
+            <StringItem index="12" value="11"/>
+            <StringItem index="13" value="12"/>
+            <StringItem index="14" value="13"/>
+            <StringItem index="15" value="14"/>
+            <StringItem index="16" value="15"/>
+            <StringItem index="17" value="16"/>
+            <StringItem index="18" value="17"/>
+            <StringItem index="19" value="18"/>
+            <StringItem index="20" value="19"/>
+            <StringItem index="21" value="20"/>
+            <StringItem index="22" value="21"/>
+            <StringItem index="23" value="22"/>
+            <StringItem index="24" value="23"/>
+            <StringItem index="25" value="24"/>
+            <StringItem index="26" value="25"/>
+            <StringItem index="27" value="26"/>
+            <StringItem index="28" value="27"/>
+            <StringItem index="29" value="28"/>
+            <StringItem index="30" value="29"/>
+            <StringItem index="31" value="30"/>
+            <StringItem index="32" value="31"/>
+            <StringItem index="33" value="32"/>
+            <StringItem index="34" value="33"/>
+            <StringItem index="35" value="34"/>
+            <StringItem index="36" value="35"/>
+            <StringItem index="37" value="36"/>
+            <StringItem index="38" value="37"/>
+            <StringItem index="39" value="38"/>
+            <StringItem index="40" value="39"/>
+            <StringItem index="41" value="40"/>
+            <StringItem index="42" value="41"/>
+            <StringItem index="43" value="42"/>
+            <StringItem index="44" value="43"/>
+            <StringItem index="45" value="44"/>
+            <StringItem index="46" value="45"/>
+            <StringItem index="47" value="46"/>
+            <StringItem index="48" value="47"/>
+            <StringItem index="49" value="48"/>
+            <StringItem index="50" value="49"/>
+            <StringItem index="51" value="50"/>
+            <StringItem index="52" value="51"/>
+            <StringItem index="53" value="52"/>
+            <StringItem index="54" value="53"/>
+            <StringItem index="55" value="54"/>
+            <StringItem index="56" value="55"/>
+            <StringItem index="57" value="56"/>
+            <StringItem index="58" value="57"/>
+            <StringItem index="59" value="58"/>
+            <StringItem index="60" value="59"/>
+          </StringArray>
+        </Property>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
